--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "graphql": "^15.5.0",
     "express-graphql": "^0.12.0"
+   
   }
 }
